--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light font-ram">
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarToggle">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0 no-select pointer">
       <li *ngFor="let route of routes">
         <a (click)="navigateTo(route.route)" [routerLinkActive]="['active']" class="nav-link px-2 link-secondary">{{route.label}}</a>
       </li>
     </ul>
-
     <div class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2 outline-none no-border" type="search" #searchInput placeholder="Search"  (keyup)="validateInput(searchInput.value, $event)">
+      <input class="form-control mr-sm-2 outline-none no-border" type="search" #searchInput placeholder="Search..."  (keyup)="validateInput(searchInput.value, $event)">
       <button class="btn btn-outline-secondary my-2 my-sm-0" (click)="search(searchInput.value)">Search</button>
     </div>
   </div>
