fix responsive title and pagination

--- a/src/app/modules/rickandmorty/pages/locations/locations.component.html
+++ b/src/app/modules/rickandmorty/pages/locations/locations.component.html
@@ -36,12 +36,10 @@
       </div>
     </div>
   </div>
-  
-
 </div>
 
 <nav>
-  <ul class="pagination pagination-lg justify-content-center">
+  <ul class="pagination pagination-md justify-content-center">
     <li class="page-item pointer no-select" [ngClass]="{'disabled': currentPage === 1}">
       <a class="page-link" (click)="setCurrentPage(currentPage-1)">Previous</a>
     </li>
