--- a/src/app/modules/rickandmorty/pages/episodes/episodes.component.scss
+++ b/src/app/modules/rickandmorty/pages/episodes/episodes.component.scss
@@ -81,3 +81,11 @@
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
+.name-character {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+  color: #1b6f20;
+} 
