--- a/src/app/modules/rickandmorty/pages/locations/locations.component.html
+++ b/src/app/modules/rickandmorty/pages/locations/locations.component.html
@@ -34,6 +34,7 @@
           <div class="overlay" (click)="goToCharacterDetail(character)">
             <div class="text font-ram">{{character.name}}</div>
           </div>
+          <p class="name-character">{{character.name}}</p>
         </div>
       </div>
     </div>
