--- a/src/app/modules/rickandmorty/pages/locations/locations.component.scss
+++ b/src/app/modules/rickandmorty/pages/locations/locations.component.scss
@@ -83,3 +83,11 @@
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
+.name-character {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+  color: #53abee;
+} 
