fix margin in tables

--- a/src/app/modules/rickandmorty/pages/locations/locations.component.html
+++ b/src/app/modules/rickandmorty/pages/locations/locations.component.html
@@ -3,7 +3,7 @@
     <h1 class="font-ram title-page text-center mt-5 mb-5 no-select">LOCATIONS</h1>
   </div>
   <div class="mt-2 d-block align-content-center animate__animated animate__fadeIn" [ngClass]="[showCharacters? 'col-12 col-md-6' : 'col-12']">
-    <div class="row mr-3 ml-3">
+    <div class="row">
       <br>
       <div class="table-responsive">
         <table class="table table-striped no-select" style="font-size: 1.2rem; color: #53abee;">
