adds type character to character detail

--- a/src/app/modules/rickandmorty/pages/character-detail/character-detail.component.html
+++ b/src/app/modules/rickandmorty/pages/character-detail/character-detail.component.html
@@ -17,19 +17,19 @@
             <tbody>
               <tr>
                 <th scope="row">Status</th>
-                <td>{{characterData?.status}}</td>
+                <td>{{characterData.status}}</td>
               </tr>
               <tr>
                 <th scope="row">Species</th>
-                <td>{{characterData?.species}}</td>
+                <td>{{characterData.species}}</td>
               </tr>
               <tr>
                 <th scope="row">Origin</th>
-                <td>{{characterData?.origin.name}}</td>
+                <td>{{characterData.origin?.name}}</td>
               </tr>
               <tr>
                 <th scope="row">Location</th>
-                <td>{{characterData?.location.name}}</td>
+                <td>{{characterData.location.name}}</td>
               </tr>
               <tr>
                 <th scope="row">Gender</th>
